test/deca/context/invalid/3_24_method_return_void.deca
// Description:
//    methode qui return void
//
// Resultats:
//    Ligne 8

class A {
   void rien(int a) {
      a = a+1;
      int b = 2;
      return;
   }
}
